--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>Sontu</li>
         <li>Pontu</li>
       </ul>
+      <h1>BM. Govt. College</h1>
     </section>
     <img src="./greenBeauty.jpg" alt="" />
   </body>
